test_suite5/ALAN/test_suite/alan-2022-examples/failing/006870_mutation.alan
source zR begin 1 get rLWNa end
